# dev-challenge-task-list

./: .env.sample  .gitignore  .stylelintrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
server/: .env.sample  Cargo.toml  README.md
server/src/: main.rs
server/src/controllers/: tasks.rs
server/src/modules/: db.rs
src/: App.tsx  main.tsx  types.d.ts
src/components/: Header.tsx
src/components/TaskList/: NewTaskRow.tsx  TaskList.tsx  TaskRow.tsx
src/config/: axios.ts
src/controllers/: tasksController.ts
src/pages/: index.tsx
src/styles/: header.scss  index.scss  task-list.scss
src/utils/: tasks.ts
tests/: index.spec.ts
