[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.1", features = ["attributes"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-lite = "2.6.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-async-std", "postgres"] }
tide = "0.16.0"
